--- a/mbd_example_spi/mbd_dfp_STM32F446RETX/mbd_dfp_STM32F446RETX.ioc
+++ b/mbd_example_spi/mbd_dfp_STM32F446RETX/mbd_dfp_STM32F446RETX.ioc
@@ -1,46 +1,36 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_11
-ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_12
-ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_13
-ADC1.DMAContinuousRequests=ENABLE
-ADC1.DiscontinuousConvMode=DISABLE
-ADC1.EOCSelection=ADC_EOC_SEQ_CONV
-ADC1.ExternalTrigConv=ADC_SOFTWARE_START
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ScanConvMode,DiscontinuousConvMode,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversion,ExternalTrigConv,DMAContinuousRequests,EOCSelection
-ADC1.NbrOfConversion=4
-ADC1.NbrOfConversionFlag=1
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.Rank-1\#ChannelRegularConversion=2
-ADC1.Rank-2\#ChannelRegularConversion=3
-ADC1.Rank-3\#ChannelRegularConversion=4
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.ScanConvMode=ENABLE
-ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.ADC1.4.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.4.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.ADC1.4.Instance=DMA2_Stream0
-Dma.ADC1.4.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.4.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.4.Mode=DMA_NORMAL
-Dma.ADC1.4.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC1.4.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.4.Priority=DMA_PRIORITY_HIGH
-Dma.ADC1.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=USART1_RX
 Dma.Request1=USART1_TX
 Dma.Request2=USART2_RX
 Dma.Request3=USART2_TX
-Dma.Request4=ADC1
-Dma.Request5=USART3_RX
-Dma.Request6=USART3_TX
-Dma.RequestsNb=7
+Dma.Request4=USART3_RX
+Dma.Request5=USART3_TX
+Dma.Request6=SPI1_TX
+Dma.Request7=SPI1_RX
+Dma.RequestsNb=8
+Dma.SPI1_RX.7.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.7.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_RX.7.Instance=DMA2_Stream0
+Dma.SPI1_RX.7.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.7.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.7.Mode=DMA_NORMAL
+Dma.SPI1_RX.7.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.7.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.7.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_RX.7.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI1_TX.6.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.6.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_TX.6.Instance=DMA2_Stream3
+Dma.SPI1_TX.6.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_TX.6.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.6.Mode=DMA_NORMAL
+Dma.SPI1_TX.6.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_TX.6.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.6.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_TX.6.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART1_RX.0.Instance=DMA2_Stream2
@@ -81,69 +71,65 @@ Dma.USART2_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART2_TX.3.PeriphInc=DMA_PINC_DISABLE
 Dma.USART2_TX.3.Priority=DMA_PRIORITY_LOW
 Dma.USART2_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART3_RX.5.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART3_RX.5.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART3_RX.5.Instance=DMA1_Stream1
-Dma.USART3_RX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART3_RX.5.MemInc=DMA_MINC_ENABLE
-Dma.USART3_RX.5.Mode=DMA_NORMAL
-Dma.USART3_RX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART3_RX.5.PeriphInc=DMA_PINC_DISABLE
-Dma.USART3_RX.5.Priority=DMA_PRIORITY_LOW
-Dma.USART3_RX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART3_TX.6.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART3_TX.6.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART3_TX.6.Instance=DMA1_Stream3
-Dma.USART3_TX.6.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART3_TX.6.MemInc=DMA_MINC_ENABLE
-Dma.USART3_TX.6.Mode=DMA_NORMAL
-Dma.USART3_TX.6.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART3_TX.6.PeriphInc=DMA_PINC_DISABLE
-Dma.USART3_TX.6.Priority=DMA_PRIORITY_LOW
-Dma.USART3_TX.6.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART3_RX.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART3_RX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART3_RX.4.Instance=DMA1_Stream1
+Dma.USART3_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_RX.4.MemInc=DMA_MINC_ENABLE
+Dma.USART3_RX.4.Mode=DMA_NORMAL
+Dma.USART3_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_RX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_RX.4.Priority=DMA_PRIORITY_LOW
+Dma.USART3_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART3_TX.5.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART3_TX.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART3_TX.5.Instance=DMA1_Stream3
+Dma.USART3_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_TX.5.MemInc=DMA_MINC_ENABLE
+Dma.USART3_TX.5.Mode=DMA_NORMAL
+Dma.USART3_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_TX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_TX.5.Priority=DMA_PRIORITY_LOW
+Dma.USART3_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F446RET6
 Mcu.Family=STM32F4
-Mcu.IP0=ADC1
-Mcu.IP1=DMA
-Mcu.IP10=USART2
-Mcu.IP11=USART3
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
+Mcu.IP0=DMA
+Mcu.IP1=NVIC
+Mcu.IP10=USART3
+Mcu.IP2=RCC
+Mcu.IP3=SPI1
 Mcu.IP4=SYS
 Mcu.IP5=TIM1
-Mcu.IP6=TIM2
-Mcu.IP7=TIM6
-Mcu.IP8=TIM7
-Mcu.IP9=USART1
-Mcu.IPNb=12
+Mcu.IP6=TIM6
+Mcu.IP7=TIM7
+Mcu.IP8=USART1
+Mcu.IP9=USART2
+Mcu.IPNb=11
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC0
-Mcu.Pin1=PC1
-Mcu.Pin10=PA10
-Mcu.Pin11=PC11
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin13=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin14=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin15=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin2=PC2
-Mcu.Pin3=PC3
-Mcu.Pin4=PA0-WKUP
-Mcu.Pin5=PA1
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PB10
-Mcu.Pin9=PA9
-Mcu.PinsNb=16
+Mcu.Pin0=PA2
+Mcu.Pin1=PA3
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin12=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin2=PA4
+Mcu.Pin3=PA5
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.Pin6=PC5
+Mcu.Pin7=PB10
+Mcu.Pin8=PA9
+Mcu.Pin9=PA10
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
-MxCube.Version=6.2.1
-MxDb.Version=DB.6.0.21
-NVIC.ADC_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
+MxCube.Version=6.9.0
+MxDb.Version=DB.6.0.90
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
@@ -151,6 +137,7 @@ NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -161,31 +148,33 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM1_UP_TIM10_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
-NVIC.TIM6_DAC_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
-NVIC.TIM7_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA0-WKUP.Signal=S_TIM2_CH1_ETR
-PA1.Signal=S_TIM2_CH2
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA4.Mode=NSS_Signal_Hard_Output
+PA4.Signal=SPI1_NSS
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
-PC0.Signal=ADCx_IN10
-PC1.Signal=ADCx_IN11
-PC11.Mode=Asynchronous
-PC11.Signal=USART3_RX
-PC2.Signal=ADCx_IN12
-PC3.Signal=ADCx_IN13
+PC5.Mode=Asynchronous
+PC5.Signal=USART3_RX
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -196,7 +185,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F446RETx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.2
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.27.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -217,7 +206,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM6_Init-TIM6-false-HAL-true,8-MX_TIM7_Init-TIM7-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM6_Init-TIM6-false-HAL-true,8-MX_TIM7_Init-TIM7-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_SPI1_Init-SPI1-false-HAL-true
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=36000000
@@ -256,27 +245,14 @@ RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=144000000
 RCC.VCOSAIInputFreq_Value=1000000
 RCC.VCOSAIOutputFreq_Value=192000000
-SH.ADCx_IN10.0=ADC1_IN10,IN10
-SH.ADCx_IN10.ConfNb=1
-SH.ADCx_IN11.0=ADC1_IN11,IN11
-SH.ADCx_IN11.ConfNb=1
-SH.ADCx_IN12.0=ADC1_IN12,IN12
-SH.ADCx_IN12.ConfNb=1
-SH.ADCx_IN13.0=ADC1_IN13,IN13
-SH.ADCx_IN13.ConfNb=1
-SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
-SH.S_TIM2_CH1_ETR.ConfNb=1
-SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
-SH.S_TIM2_CH2.ConfNb=1
-TIM1.IPParameters=TIM_MasterOutputTrigger
-TIM1.TIM_MasterOutputTrigger=TIM_TRGO_RESET
-TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Period,TIM_MasterOutputTrigger,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2
-TIM2.Period=1000
-TIM2.Pulse-PWM\ Generation1\ CH1=500
-TIM2.Pulse-PWM\ Generation2\ CH2=500
-TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI1.CLKPolarity=SPI_POLARITY_HIGH
+SPI1.CalculateBaudRate=2.25 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,BaudRatePrescaler,CLKPolarity
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualNSS=VM_NSSHARD
+SPI1.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
